[project]
name = "transaction-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenia Komendant",email = "eekomendant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ['.venv', 'tests']


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
        \.git
      | \.venv
      | data
  )/
)
'''


[tool.isort]
# Максимальная длина строки
line_length = 119
